# AI_Programming

./: .gitignore  main.py  pyproject.toml
Week_3/: matplotlib-lab.ipynb  numpy-lab-final.ipynb
Week_5/: multiclass_nn_blank.ipynb  simplenn_staged.ipynb
Week_6/: AlexNet_blank.ipynb  mnist4_blank.ipynb
